--- a/about.html
+++ b/about.html
@@ -913,7 +913,22 @@
             }
         }
     </script>
+    <!-- Floating Contact Buttons -->
+<div class="fixed bottom-6 right-6 flex flex-col gap-3 z-50">
 
+    <!-- زر واتساب -->
+    <a href="https://wa.me/#" target="_blank"
+       class="bg-green-500 hover:bg-green-600 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition-all duration-300">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
+
+    <!-- زر الاتصال -->
+    <a href="tel:+#"
+       class="bg-cyan-600 hover:bg-cyan-700 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition-all duration-300">
+        <i class="fas fa-phone text-xl"></i>
+    </a>
+
+</div>
 <footer class="bg-[#1a2336] text-white py-8 md:py-12 lg:py-16">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <!-- المحتوى الرئيسي للفوتر -->
