--- a/index.html
+++ b/index.html
@@ -1076,11 +1076,11 @@
                 mr-12 xl:ml-24
                 mt-32">
 
-                <div class="group relative rounded-3xl overflow-hidden h-56 cursor-pointer card-hover shadow-2xl">
-                    <img src="./img/pexels-andreimike-4632512.jpg" alt="Discount Up 50%"
-                        class="w-full h-full object-cover">
+                <div class="group relative rounded-3xl overflow-hidden h-65 cursor-pointer card-hover shadow-2xl">
+                    <img src="./img/1 (15).png" alt="Discount Up 50%"
+                        class="w-full h-auto object-contain">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent"></div>
-                    <div class="absolute bottom-0 right-0 left-0 p-6 text-white">
+                    <!-- <div class="absolute bottom-0 right-0 left-0 p-6 text-white">
                         <h3 class="text-2xl font-bold mb-2">خصومات تصل إلى 50%</h3>
                         <p class="text-sm text-gray-200 mb-3 line-clamp-2">
                             عروض مميزة على أفضل الرحلات والوجهات السياحية
@@ -1089,14 +1089,14 @@
                             class="text-white hover:text-[#e69a17] transition-colors text-sm font-semibold flex items-center gap-1">
                             اعرف المزيد
                         </a>
-                    </div>
+                    </div> -->
                 </div>
 
-                <div class="group relative rounded-3xl overflow-hidden h-60 cursor-pointer card-hover shadow-2xl">
-                    <img src="./img/d28dab6a28d4011d4f22da89e1a5a84e.jpg" alt="Safe Traveling"
-                        class="w-full h-full object-cover">
+                <div class="group relative rounded-3xl overflow-hidden h-65 cursor-pointer card-hover shadow-2xl">
+                    <img src="./img/2 (15).png" alt="Safe Traveling"
+                        class="w-full h-auto object-contain">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent"></div>
-                    <div class="absolute bottom-0 right-0 left-0 p-6 text-white">
+                    <!-- <div class="absolute bottom-0 right-0 left-0 p-6 text-white">
                         <h3 class="text-xl font-bold mb-2">سفر آمن ومضمون</h3>
                         <p class="text-sm text-gray-200 mb-2 line-clamp-2">
                             نضمن لك راحة وأمان كاملين طوال رحلتك
@@ -1105,21 +1105,21 @@
                             class="text-white hover:text-[#e69a17] transition-colors text-sm font-semibold flex items-center gap-1">
                             اعرف المزيد
                         </a>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div
-                    class="group relative rounded-3xl overflow-hidden h-65 z-5 cursor-pointer card-hover shadow-2xl bg-slate-800">
-                    <img src="./img/Rectangle-43.png" alt="Happy Travelers" class="w-full h-full object- ">
+                    class="group relative rounded-3xl overflow-hidden h-60 z-5 curso0r-pointer card-hover shadow-2xl bg-slate-800">
+                    <img src="./img/3 (8).png" alt="Happy Travelers" class="w-full h-auto object-contain">
                     <div class="absolute inset-0 bg-gradient-to-t from-slate-900 via-slate-900/50 to-transparent">
                     </div>
                     <div
                         class="absolute bottom-0 right-0 left-0 p-6 text-white flex items-end justify-between h-full">
                         <div></div>
-                        <div class="text-right">
+                        <!-- <div class="text-right">
                             <p class="text-3xl font-bold">200K</p>
                             <p class="text-sm text-gray-300">عملاء سعداء</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
