--- a/contact.html
+++ b/contact.html
@@ -966,13 +966,13 @@
 <div class="fixed bottom-6 right-6 flex flex-col gap-3 z-50">
 
     <!-- زر واتساب -->
-    <a href="https://wa.me/#" target="_blank"
+    <a href="https://wa.me/966502113147" target="_blank"
        class="bg-green-500 hover:bg-green-600 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition-all duration-300">
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
 
     <!-- زر الاتصال -->
-    <a href="tel:+#"
+    <a href="tel:0502113147"
        class="bg-cyan-600 hover:bg-cyan-700 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition-all duration-300">
         <i class="fas fa-phone text-xl"></i>
     </a>
